--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             </div>
         </div>
         <div class="first-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates delectus quam vel, repellat exercitationem at aperiam maiores culpa quas perferendis cupiditate pariatur quis doloremque eaque! Eius commodi dolores enim veritatis.
-            Soluta aperiam excepturi obcaecati quis temporibus, iusto quasi vel! Minima non deleniti quas atque, nam debitis iure error enim delectus fuga modi distinctio dicta? Et at repellat molestias ratione hic!
-            Laboriosam placeat maiores obcaecati minima, ex perspiciatis dolore sed natus? Voluptatibus, velit praesentium dolore recusandae voluptate totam. Rem minima nisi soluta earum, delectus debitis labore, est tempora, non doloremque excepturi.
+            <p>Dentro de lo que significa tener una adecuada organización es bueno tener notas pequeñas sobre cosas puntuales que debemos recordar o tener en cuenta en un futuro, como el formato del archivo del trabajo grupal que debo presentar o la duración máxima de mi video de exposicióm. Es por ello que se ha desarrollado un apartado de notas rápidas dedicado con diferentes funcionalidades dentro del aplicativo.
+            El usuario podrá realizar notas rápidas en cualquier momento, guardarlas, editarlas o eliminarlas.
+            Esto ayudará a que puedan tener una mejor organización y a recordar detalles importantes de futuras actividades o tareas y trabajos a presentar.
           </p>
         </div>
         <div class="second-part">
