--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h4>Bee Organized</h4>
                 <div class="line-bee"></div>
              
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nostrum tempora temporibus dolorum quas quibusdam et quod, veniam, expedita rem molestiae ducimus recusandae at quae reprehenderit architecto optio error quisquam!</p>
+                <p>Esta es una aplicación pensada en ayudar a todos esos estudiantes universitarios que buscan mejorar su organizacióm y el manejo optimo de su tiempo en las diversas actividades de su vida, dentro y fuera de la universidad.</p>
             </div>
             
         </div>
