--- a/index.html
+++ b/index.html
@@ -204,9 +204,7 @@
                         </div>
                         <div class="content-info">
                             <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur assumenda nobis praesentium est blanditiis? Eos eum vero, officiis reiciendis aspernatur, culpa corporis ex est, magnam eligendi incidunt nemo odio inventore?
-                            Aperiam aut ea nemo fugiat, corrupti, tempora sapiente debitis hic veniam qui voluptatum explicabo officiis dolorem itaque iure, nihil odio quibusdam asperiores? Ratione omnis provident qui odio excepturi pariatur esse.
-                            Maxime dolorem accusantium a quaerat officia aut dolor quos! Ducimus minima nesciunt assumenda? Laudantium, quo quisquam voluptates necessitatibus animi minus, obcaecati voluptas sint veniam mollitia molestias eos unde. Velit, quod?
+                             Dentro de lo que significa tener una adecuada organización es bueno tener notas pequeñas sobre cosas puntuales que debemos recordar o tener en cuenta en un futuro, como el formato del archivo del trabajo grupal que debo presentar o la duración máxima de mi video de exposicióm. Es por ello que se ha desarrollado un apartado de notas rápidas dedicado con diferentes funcionalidades dentro del aplicativo. El usuario podrá realizar notas rápidas en cualquier momento, guardarlas, editarlas o eliminarlas. Esto ayudará a que puedan tener una mejor organización y a recordar detalles importantes de futuras actividades o tareas y trabajos a presentar.
                             </p>
                         </div>
                     </div>
