--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
             </div>
         </div>
         <div class="first-text">
-            <p>Dentro de lo que significa tener una adecuada organización es bueno tener notas pequeñas sobre cosas puntuales que debemos recordar o tener en cuenta en un futuro, como el formato del archivo del trabajo grupal que debo presentar o la duración máxima de mi video de exposicióm. Es por ello que se ha desarrollado un apartado de notas rápidas dedicado con diferentes funcionalidades dentro del aplicativo.
-            El usuario podrá realizar notas rápidas en cualquier momento, guardarlas, editarlas o eliminarlas.
-            Esto ayudará a que puedan tener una mejor organización y a recordar detalles importantes de futuras actividades o tareas y trabajos a presentar.
+            <p>Somos un grupo de estudiantes de la carrera de Ingeniería de Sistemas de la Información de la Universidad Peruana de Ciencias Aplicadas (UPC). Como cualquier estudiante, nosotros pasamos por esos primeros ciclos en los que comienzas una nueva etapa en tu vida, un mundo completamente diferente. Al igual que varios de ustedes, en los primeros ciclos nos afectó un poco el cambio de la vida escolar a la vida universitaria y uno de los principales problemas que enfrentamos fue la falta de una adecuada organización, que afectaba nuestro rendimiento académcio así como en nuestra vida personal. Es por ello que presentamos a BeeOrganized.
           </p>
         </div>
         <div class="second-part">
