--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="first-text">
-            <p>xdSomos un grupo de estudiantes de la carrera de Ingeniería de Sistemas de la Información de la Universidad Peruana de Ciencias Aplicadas (UPC). Como cualquier estudiante, nosotros pasamos por esos primeros ciclos en los que comienzas una nueva etapa en tu vida, un mundo completamente diferente. Al igual que varios de ustedes, en los primeros ciclos nos afectó un poco el cambio de la vida escolar a la vida universitaria y uno de los principales problemas que enfrentamos fue la falta de una adecuada organización, que afectaba nuestro rendimiento académcio así como en nuestra vida personal. Es por ello que presentamos a BeeOrganized.
+            <p>Somos un grupo de estudiantes de la carrera de Ingeniería de Sistemas de la Información de la Universidad Peruana de Ciencias Aplicadas (UPC). Como cualquier estudiante, nosotros pasamos por esos primeros ciclos en los que comienzas una nueva etapa en tu vida, un mundo completamente diferente. Al igual que varios de ustedes, en los primeros ciclos nos afectó un poco el cambio de la vida escolar a la vida universitaria y uno de los principales problemas que enfrentamos fue la falta de una adecuada organización, que afectaba nuestro rendimiento académcio así como en nuestra vida personal. Es por ello que presentamos a BeeOrganized.
           </p>
         </div>
         <div class="second-part">
