--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                         </div>
                         <div class="content-info">
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur assumenda nobis praesentium est blanditiis? Eos eum vero, officiis reiciendis aspernatur, culpa corporis ex est, magnam eligendi incidunt nemo odio inventore?
-                                Aperiam aut ea nemo fugiat, corrupti, tempora sapiente debitis hic veniam qui voluptatum explicabo officiis dolorem itaque iure, nihil odio quibusdam asperiores? Ratione omnis provident qui odio excepturi pariatur esse.
-                                Maxime dolorem accusantium a quaerat officia aut dolor quos! Ducimus minima nesciunt assumenda? Laudantium, quo quisquam voluptates necessitatibus animi minus, obcaecati voluptas sint veniam mollitia molestias eos unde. Velit, quod?
+                                Entre nuestros beneficios, tenemos un horario que les permite a nuestros usuarios organizarse entre sus horarios de clase, libre y de alimentación. Gracias a ello pueden tener una forma estable de realizar sus actividades y
+                                tener una rutina saludable que reduzca y finalmente evite daños perjudiciales al usuario debido al estrés generado por la desorganización y que acarree enfermedades a largo plazo. Nuestro horario es de uso amigable, con
+                                indicadores tanto para agregar, borrar y actualizar elementos, todo para que el usuario tenga una buena experiencia.
                             </p>
                         </div>
                    </div>
