--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                         </div>
                         <div class="content-info">
                             <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur assumenda nobis praesentium est blanditiis? Eos eum vero, officiis reiciendis aspernatur, culpa corporis ex est, magnam eligendi incidunt nemo odio inventore?
-                            Aperiam aut ea nemo fugiat, corrupti, tempora sapiente debitis hic veniam qui voluptatum explicabo officiis dolorem itaque iure, nihil odio quibusdam asperiores? Ratione omnis provident qui odio excepturi pariatur esse.
-                            Maxime dolorem accusantium a quaerat officia aut dolor quos! Ducimus minima nesciunt assumenda? Laudantium, quo quisquam voluptates necessitatibus animi minus, obcaecati voluptas sint veniam mollitia molestias eos unde. Velit, quod?
+                            Gracias a nuestro sistema intuitivo, nuestra app le genera al usuario distintas distribuciones en cuanto a sus horarios se refiere con el objetivo de ofrecerle una variedad de opciones para que su organización sea óptima y
+                            de su agrado, permitiendole que pueda organizarse correctamente según sus preferencias personales y poder cambiarlos segun corresponda para tenga flexibilidad según su entorno constantemente cambiante como lo son la semana
+                            de examenes o de exposiciones por poner algunos ejemplos.
                             </p>
                         </div>
                     </div>
