--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur assumenda nobis praesentium est blanditiis? Eos eum vero, officiis reiciendis aspernatur, culpa corporis ex est, magnam eligendi incidunt nemo odio inventore?
                             Aperiam aut ea nemo fugiat, corrupti, tempora sapiente debitis hic veniam qui voluptatum explicabo officiis dolorem itaque iure, nihil odio quibusdam asperiores? Ratione omnis provident qui odio excepturi pariatur esse.
-                            Maxime dolorem accusantium a quaerat officia aut dolor quos! Ducimus minima nesciunt assumenda? Laudantium, quo quisquam voluptates necessitatibus animi minus, obcaecati voluptas sint veniam mollitia molestias eos unde. Velit, quod?
+                            Maxime dolorem accusantium a quaerat officia aut dolor quos! Ducimus minima nesciunt assumend.a? Laudantium, quo quisquam voluptates necessitatibus animi minus, obcaecati voluptas sint veniam mollitia molestias eos unde. Velit, quod?
                             </p>
                         </div>
                     </div>
