--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                         </div>
                         <div class="content-info">
                             <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur assumenda nobis praesentium est blanditiis? Eos eum vero, officiis reiciendis aspernatur, culpa corporis ex est, magnam eligendi incidunt nemo odio inventore?
-                            Aperiam aut ea nemo fugiat, corrupti, tempora sapiente debitis hic veniam qui voluptatum explicabo officiis dolorem itaque iure, nihil odio quibusdam asperiores? Ratione omnis provident qui odio excepturi pariatur esse.
-                            Maxime dolorem accusantium a quaerat officia aut dolor quos! Ducimus minima nesciunt assumend.a? Laudantium, quo quisquam voluptates necessitatibus animi minus, obcaecati voluptas sint veniam mollitia molestias eos unde. Velit, quod?
+                                Entre nuestras principales carecteristicas de nuestra aplicacion, podemos resaltar nuestros recordatorios, los cuales enviaremos al usuario para hacerle presente sobre sus trabajos pendientes con un tiempo de anticipacion,
+                                de esta forma evitaremos la procastinacion, acción muy común en los jovenes universitarios hoy en dia. Ademas nuestros recordatorios tendran un diseño innovador para que puedan ser identificados con gran facilidad por el usuario
+                                y ademas lo configuraremos de forma que se envien cada cierto tiempo al usuario y que no se incomodo para el mismo, con esto lograremos darle la mejor experiencia dentro de la aplicación al usuario.
                             </p>
                         </div>
                     </div>
