--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div class="content-slider" id="content-slider">
         <ul>
-          <li><a href="#nosotros">Carlos</a></li>
+          <li><a href="#nosotros">Sobre Nosotros</a></li>
           <li><a href="#servicios">Servicios</a></li>
           <li><a href="#app">App</a></li>
           <li><a href="#soporte">Soporte</a></li>
