--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
           <h3>Android</h3>
           <p style="color: white">Disponible en Play Store</p>
           <button>Descargar</button>
-          <button>Ver más</button>
+          <button id="btn-vermas-android">Ver más</button>
         </div>
         <div class="ios">
           <h3>iOS</h3>
           <p style="color: white">Disponible en App Store</p>
           <button>Descargar</button>
-          <button>Ver más</button>
+          <button id="btn-vermas-ios">Ver más</button>
         </div>
       </div>
     </section>
@@ -510,6 +510,9 @@
         </div>
       </footer>
     </section>
+          <div class="filtro"></div>
+      <div class="video" id="video-android"></div>
+      <div class="video" id="video-ios"></div>
     <script src="./script.js"></script>
     <script
       src="https://kit.fontawesome.com/c32e161ce9.js"
