--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
       </div>
       <div class="btn-content">
-        <button style="margin-left: 2rem">Iniciar Sesión</button>
+        <button style="margin-left: 2rem"><a href="/login.html">Iniciar Sesión</a></button>
         <button style="margin-left: 1rem">Descargar</button>
       </div>
       <div class="menu-btn">
@@ -55,7 +55,7 @@
           <li><a href="#soporte">Soporte</a></li>
         </ul>
         <div class="btn-content-search">
-          <button>Iniciar Sesión</button>
+          <button><a href="/login.html">Iniciar Sesión</a></button>
           <button>Descargar</button>
         </div>
       </div>
