--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="capa"></div>
     <nav  class="nav-bar-container">
         <div class="logo-content">
-            <img class="logo" src="./assets/images/BeeOrganized.png">
+            <img class="logo" src="./assets/images/BeeOrganized.png" alt="logo de la aplicación de abeja con calendario">
             <div class="searching">
                 <input>
                 <img src="./assets/images/search_icon.png">
@@ -71,7 +71,7 @@
             <h2 class="orga-title">La organización</h2>
             <h2 class="base-title"> es la base del éxito.</h2>
             <h3>Se parte del <b>cambio</b> con nosotros</h3>
-            <button>Únete</button>
+            <button id="btn-know">Conocenos</button>
         </div>
  
     </section>
@@ -86,7 +86,7 @@
             </p>
           </div>
           <div class="second-part">
-              <img src="./assets/images/logo_amarillo.png">
+              <img src="./assets/images/logo_amarillo.png" alt="logo de la aplicación de abeja con calendario">
               <div class="part-new">
                   
                   <h4>Bee Organized</h4>
@@ -119,19 +119,19 @@
                       </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img  src="./assets/images/kaleidico-3V8xo5Gbusk-unsplash.jpg" class="d-block w-100" alt="...">
+                      <img  src="./assets/images/kaleidico-3V8xo5Gbusk-unsplash.jpg" class="d-block w-100" alt="persona mostrandole indicaciones en una pizarra a otra persona">
                     </div>
                     <div class="carousel-item">
-                      <img  src="./assets/images/adolfo-felix-Yi9-QIObQ1o-unsplash.jpg" class="d-block w-100" alt="...">
+                      <img  src="./assets/images/adolfo-felix-Yi9-QIObQ1o-unsplash.jpg" class="d-block w-100" alt="persona escribiendo en una lista sus actividades">
                     </div>
                     <div class="carousel-item">
-                      <img src="./assets/images/ella-de-kross-AY43aA44KCI-unsplash.jpg" class="d-block w-100" alt="...">
+                      <img src="./assets/images/ella-de-kross-AY43aA44KCI-unsplash.jpg" class="d-block w-100" alt="figuras pegadas en un reja que hacen referencia a recuerdos">
                     </div>
                     <div class="carousel-item">
-                      <img src="./assets/images/chermiti-mohamed-oVi586BZ2lY-unsplash.jpg" class="d-block w-100" alt="...">
+                      <img src="./assets/images/chermiti-mohamed-oVi586BZ2lY-unsplash.jpg" class="d-block w-100" alt="persona peliroja sonriendo">
                     </div>
                     <div class="carousel-item">
-                      <img src="./images/jason-goodman-Oalh2MojUuk-unsplash.jpg" class="d-block w-100" alt="...">
+                      <img src="./assets/images/jason-goodman-Oalh2MojUuk-unsplash.jpg" class="d-block w-100" alt="persona explicando post its que estan pegados en una pared">
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -393,11 +393,21 @@
   
           </footer>
       </section>
-      <div class="video" id="video-android"></div>
-      <div class="video" id="video-ios"></div>
-      <script src="assets\scripts\script.js"></script>
+      <div class="filtro" id="filtro"></div>
+      <div class="video" id="video-android">
+        <img id="equis-android" class="equis" src="./assets/images/1727490.svg">
+        <iframe id="youtube_player1" class="frame" src="https://www.youtube.com/embed/Wxgpe6djCus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <button id="btn-prot-android">Ver prototipo</button>
+      </div>
+      <div class="video" id="video-ios">
+        <img id="equis-ios" class="equis" src="./assets/images/1727490.svg">
+        <iframe id="youtube_player" class="frame" src="https://www.youtube.com/embed/dgtbuKjgTJk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <button id="btn-prot-ios">Ver prototipo</button>
+      </div>
+    
       <script src="https://kit.fontawesome.com/c32e161ce9.js" crossorigin="anonymous"></script>
       <script src="./assets/scripts/scrollreveal.js"></script>
+      <script src="./assets/scripts/script.js"></script>
       <script src="./assets/scripts/animaciones.js"></script>
       <script src="./assets/scripts/slider.js"></script>
       <script src="./assets/scripts/bootstrap.bundle.min.js"></script>
