--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div class="btn-content">
-            <button style="margin-left:2rem ;"><a href="/login.html">Iniciar Sesión</a></button>
+            <button style="margin-left:2rem ;"><a>Iniciar Sesión</a></button>
             <button style="margin-left:1rem ;">Descargar</button>
         </div>
         <div class="menu-btn">
