--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2 class="orga-title">La organización</h2>
             <h2 class="base-title"> es la base del éxito.</h2>
             <h3>Se parte del <b>cambio</b> con nosotros</h3>
-            <button>Únete</button>
+            <button id="unete-btn">Únete</button>
         </div>
  
     </section>
