--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div class="btn-content">
-            <button style="margin-left:2rem ;"><a href="/login.html">Iniciar Sesión</a></button>
+            <button style="margin-left:2rem ;"><a href="https://hub-cj.github.io/BeeOrganizedLogin/">Iniciar Sesión</a></button>
             <button style="margin-left:1rem ;">Descargar</button>
         </div>
         <div class="menu-btn">
@@ -53,7 +53,7 @@
                
             </ul>
             <div class="btn-content-search">
-                <button><a href="/login.html">Iniciar Sesión</a></button>
+                <button><a href="https://hub-cj.github.io/BeeOrganizedLogin/">Iniciar Sesión</a></button>
                 <button>Descargar</button>
             </div>
         </div>
