--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
                   <div class="redes">
                       <p>Siguenos</p>
                       <ul>
-                          <li><img src="./assets/images/facebook.png"></li>
-                          <li><img src="./assets/images/tik-tok.png"></li>
-                          <li><img src="./assets/images/instagram.png"></li>
+                          <li><a href="https://www.facebook.com/"><img src="./assets/images/facebook.png"></a></li>
+                          <li><a href="https://www.tiktok.com/foryou?is_copy_url=1&is_from_webapp=v1"><img src="./assets/images/tik-tok.png"></a></li>
+                          <li><a href="https://www.instagram.com/"><img src="./assets/images/instagram.png"></a></li>
                       </ul>
                   </div>
               </div>
